# music_genre_classification

./: .gitignore  README.md  music_genre_classification_ANN.py  music_genre_classification_CNN.py  music_genre_clustering.ipynb  pyproject.toml  untitled0.py
configs/: train.yaml
datasets/: get-dataset.md
music_genre_classification/: train.py
music_genre_classification/core/: inferencer_system.py  trainer_system.py
music_genre_classification/data/: dataset.py
music_genre_classification/models/: cnn.py
music_genre_classification/utils/: preprocessing.py
